# mcp-thinking

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  enhanced_sequential_thinking_server.py  localization.py  localization_markers.py  pyproject.toml  pytest.ini  request.json  requirements.txt  setup.py  test_docker_thinking.py  test_thinking_server.py
.cursor/: mcp.json
tests/: __init__.py  base_test.py  sse_client.py  test_client_interaction.py  test_docker_thinking.py  test_localization.py  test_thinking_server.py
